updated email address

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 <p class="contact">
                     Email:
                     <a href="mendelltaylor@me.com"
-                        >yourname@example.com</a
+                        >menmtayl@gmail.com </a>
                     >
                     | Phone: (812) 207-9868 | LinkedIn:
                     <a href="#">linkedin.com/in/Mendell Taylor MSHR</a>
